# libreGrid

./: CMakeLists.txt  README.md  TODO.md  libreGrid.kdev4
.kdev4/: libreGrid.kdev4
cmake/: Findlm_sensors.cmake
daemon/: CMakeLists.txt  Controller.cpp  Controller.h  Device.cpp  Device.h  Fan.cpp  Fan.h  Profile.cpp  Profile.h  RuleFactory.cpp  RuleFactory.h  Sensor.cpp  Sensor.h  Settings.cpp  Settings.h  Temperature.cpp  Temperature.h  libreGridd.cpp  simpleRule.cpp  simpleRule.h
daemon/hwComm/: Fan.cpp  Fan.h  FanController.cpp  FanController.h  GRIDv3.cpp  GRIDv3.h  GRIDv3Fan.cpp  GRIDv3Fan.h  NVidia.cpp  NVidia.h  NVidiaSensor.cpp  NVidiaSensor.h  NVidiaTemperature.cpp  NVidiaTemperature.h  Sensor.cpp  Sensor.h  Temperature.cpp  Temperature.h  USB.cpp  USB.h  libusbWrapper.h  lmSensors.cpp  lmSensors.h  lmSensorsChip.cpp  lmSensorsChip.h  lmSensorsTemperature.cpp  lmSensorsTemperature.h  usb_macros.h
dbus/: libre.Grid1.controller.conf  libre.Grid1.controller.xml  libre.Grid1.device.xml  libre.Grid1.fan.xml  libre.Grid1.profile.simpleRule.xml  libre.Grid1.profile.xml  libre.Grid1.sensor.xml  libre.Grid1.temperature.xml
include/libreGrid/: types.h
lib/: CMakeLists.txt  Profile.cpp  Profile.h  Profile_p.h  Rule.cpp  Rule.h  Rule_p.h  types.cpp
src/: libregrid.cpp  libregrid.h  libregrid.ui  main.cpp
tests/: CMakeLists.txt  testProfile.cpp  testProfile.h
